--- a/IoC/package.json
+++ b/IoC/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@bigbyte/utils": "file:.yalc/@bigbyte/utils",
+    "reflect-metadata": "~0.2.2",
     "tslib": "~2.3",
     "zone.js": "~0.14"
   },
