--- a/IoC/package.json
+++ b/IoC/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigbyte/ioc",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "author": "Jose Eduardo Soria Garcia <alarifeproyect@gmail.com>",
   "license": "Apache-2.0",
   "private": false,
@@ -38,10 +38,11 @@
     "test": "npx tsc --project tsconfig.test.json && node --test dist/test"
   },
   "dependencies": {
-    "@bigbyte/utils": "0.7.0",
+    "@bigbyte/utils": "0.8.0",
     "reflect-metadata": "~0.2.2",
     "tslib": "~2.3",
-    "zone.js": "~0.14"
+    "zone.js": "~0.14",
+    "uuid": "~11.1.0"
   },
   "devDependencies": {
     "@alarife/common": "~0.7.0",
